<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/regesterbackground"
    tools:context=".UserRegistrationActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9C000000"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="56dp"
                android:fontFamily="@font/alex_brush"
                android:text="@string/sinupTiltle"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/userSignupID"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/userSignupID"
                android:layout_width="367dp"
                android:layout_height="50dp"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:layout_marginBottom="28dp"
                android:background="@drawable/userinput_bg"
                android:autofillHints=""
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/your_id"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:textColor="#F6F6F5"
                android:textColorHint="#F8F3F1"
                app:layout_constraintBottom_toTopOf="@+id/UserSignupName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="MissingConstraints,RtlSymmetry,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/UserSignupName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="27dp"
                android:autofillHints=""
                android:drawableLeft="@drawable/ic_user"
                android:background="@drawable/userinput_bg"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/username_User_Signup"
                android:inputType="text"
                android:paddingStart="20dp"
                android:textColor="#F6F6F5"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:minHeight="48dp"
                android:textColorHint="#F6F6F5"
                app:layout_constraintBottom_toTopOf="@+id/UserSignupEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userSignupID"
                tools:ignore="MissingConstraints,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/UserSignupEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="28dp"
                android:background="@drawable/userinput_bg"
                android:drawableLeft="@drawable/ic_useremailsignup"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/Useremail_Signup"
                android:inputType="text"
                android:textColor="#F6F6F5"

                android:paddingStart="20dp"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:minHeight="48dp"
                android:textColorHint="#E0E0E0"
                app:layout_constraintBottom_toTopOf="@+id/UserSignupAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/UserSignupName"
                tools:ignore="MissingConstraints,TextFields,TextContrastCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/UserSignupAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="27dp"
                android:autofillHints=""
                android:drawableLeft="@drawable/ic_address"
                android:background="@drawable/userinput_bg"
                android:drawablePadding="10dp"
                android:textColor="#F6F6F5"

                android:ems="10"
                android:hint="@string/address_city_SignUp"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:minHeight="48dp"
                android:textColorHint="#F3F1F1"

                app:layout_constraintBottom_toTopOf="@+id/UserSignupPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/UserSignupEmail"
                tools:ignore="MissingConstraints,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/UserSignupPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="27dp"
                android:autofillHints=""
                android:textColor="#F6F6F5"

                android:background="@drawable/userinput_bg"
                android:drawableLeft="@drawable/ic_userpassward"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/passwordUserforsignup"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:inputType="textPassword"
                android:textColorHint="#F6F2F2"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/UserSignupAddress"
                tools:ignore="MissingConstraints,VisualLintTextFieldSize" />

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="102dp"
                android:text="Create Account"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/UserSignupPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
